--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <div class="barra_superior">
             <div class="container">
-                horário de Abertura: 8:00 - 18:00h
+                horário de Abertura: 8:00 - 18:00h.
             </div>
         </div>
         <div class="container">
