--- a/faleConosco.html
+++ b/faleConosco.html
@@ -38,7 +38,7 @@
     <section class="sec_fale">
         <div class="container">
             <div class="metade form">
-                <form action="">
+                <form name="form_contato" method="get">
 
                     <label for="nomeId">Nome:</label>
                     <input type="text" name="nome" id="nomeId" placeholder="ex: João">
