--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <a>X</a>
         <h2>Ofertas de 10%</h2>
         <p>
-        <form name="modal_form" method="post">
+        <form name="modal_form" method="get">
             digite seu e-mail e ganhe 10% de desconto em qualquer compra:
             <br>
-            <input type="text" name="email" placeholder="digite seu e-mail aqui">
+            <br>
+            <input type="text" name="email" autocomplete="off" placeholder="digite seu e-mail aqui">
+            <br>
+            <span name="invalido" class="nao_valido">E-mail inválido</span>
             <br>
             <br>
             <input type="submit" value="Enviar" class="btn_destaque" />
@@ -56,7 +59,7 @@
                 melhores lentes
             </p>
 
-            <p>
+            <p id="arm">
                 Armações e lentes
             </p>
 
