atualizações do fale conosco

--- a/faleConosco.html
+++ b/faleConosco.html
@@ -41,17 +41,19 @@
                 <form name="form_contato" method="get">
 
                     <label for="nomeId">Nome:</label>
-                    <input type="text" name="nome" id="nomeId" placeholder="ex: João">
+                    <input type="text" name="nome_Completo" id="nomeId" placeholder="ex: João">
                     <br>
                     <label for="emailId">Email:</label>
                     <input type="text" name="email" id="emailId" placeholder="ex: joao@gmail.com">
                     <br>
                     <label for="telId">Telefone:</label>
-                    <input type="text" name="tel" id="telId" placeholder="ex: (DDD)99-9999">
+                    <input type="text" name="telefone" id="telId" placeholder="ex: (DDD)99-9999">
                     <br>
                     <label for="mensagemId">mensagem:</label>
                     <textarea name="mensagem" id="mensagemId" placeholder="escreva aqui..." cols="21"
                         rows="4"></textarea>
+                    <br>
+                    <span class="texto">Caracteres</span>
                     <br>
                     <input type="submit" value="Enviar">
                 </form>
