--- a/faleConosco.html
+++ b/faleConosco.html
@@ -13,7 +13,7 @@
     <header>
         <div class="barra_superior">
             <div class="container">
-                .horário de Abertura: 8:00 - 18:00h
+                horário de Abertura: 8:00 - 18:00h
             </div>
         </div>
 
