--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="modal">
         <a>X</a>
-        <h2>Ofertas de 10%</h2>
+        <h2>Ofertas de 10%.</h2>
         <p>
         <form name="modal_form" method="get">
             digite seu e-mail e ganhe 10% de desconto em qualquer compra:
