nova atualização na responsividade

--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
 </head>
 
 <body>
-    <div class="modal">
-        <a>X</a>
-        <h2>Ofertas de 10%</h2>
-        <p>
-        <form name="modal_form" method="get">
-            digite seu e-mail e ganhe 10% de desconto em qualquer compra:
-            <br>
-            <br>
-            <input type="text" name="email" autocomplete="off" placeholder="digite seu e-mail aqui">
-            <br>
-            <span name="invalido" class="nao_valido">E-mail inválido</span>
-            <br>
-            <br>
-            <input type="submit" value="Enviar" class="btn_destaque" />
-        </form>
-        </p>
+    <div class="pos_modal">
+        <div class="modal">
+            <a>X</a>
+            <h2>Ofertas de 10%</h2>
+            <p>
+            <form name="modal_form" method="get">
+                digite seu e-mail e ganhe 10% de desconto em qualquer compra:
+                <br>
+                <br>
+                <input type="text" name="email" autocomplete="off" placeholder="digite seu e-mail aqui">
+                <br>
+                <span name="invalido" class="nao_valido">E-mail inválido</span>
+                <br>
+                <br>
+                <input type="submit" value="Enviar" class="btn_destaque" />
+            </form>
+            </p>
+        </div>
     </div>
     <header>
         <div class="barra_superior">
