atualização na responsividade

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="pos_modal">
         <div class="modal">
-            <a>X</a>
+            <a class="fechar">X</a>
             <h2>Ofertas de 10%</h2>
             <p>
             <form name="modal_form" method="get">
@@ -46,7 +46,8 @@
                     title="vai para a página de produtos e marcas">Produtos e Marcas</a> |
                 <a href="faleConosco.html" alt="vai para a página de fale conosco"
                     title="vai para a página de fale conosco">Fale Conosco</a>
-
+                <br>
+                <br>
                 <a class="btn_destaque" href="OndeEstamos.html">Onde estamos</a>
 
             </nav>
