--- a/OndeEstamos.html
+++ b/OndeEstamos.html
@@ -2,9 +2,12 @@
 <html lang="pt=BR">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onde estamos</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <meta charset="UTF-8">
+
 </head>
 
 <body>
@@ -30,6 +33,7 @@
             </nav>
         </div>
     </header>
+    <br class="clearfix">
     <section class="sec_onde">
         <div class="container">
             <div class="metade">
