--- a/index.html
+++ b/index.html
@@ -10,155 +10,159 @@
 </head>
 
 <body>
-    <div class="pos_modal">
-        <div class="modal">
-            <a class="fechar">X</a>
-            <h2>Ofertas de 10%</h2>
-            <p>
-            <form name="modal_form" method="get">
-                digite seu e-mail e ganhe 10% de desconto em qualquer compra:
-                <br>
-                <br>
-                <input type="text" name="email" autocomplete="off" placeholder="digite seu e-mail aqui">
-                <br>
-                <span name="invalido" class="nao_valido">E-mail inválido</span>
-                <input type="submit" value="Enviar" class="btn_destaque" />
-            </form>
-            </p>
-        </div>
-    </div>
-    <header>
-        <div class="barra_superior">
-            <div class="container">
-                horário de Abertura: 8:00 - 18:00h
-            </div>
-        </div>
-        <div class="container">
-            <img class="logo" src="img/JHOW´S ÓTICA.png" alt="aqui está a logo da empresa" title="logo da empresa Jhow">
-
-
-            <nav>
-                <a href="index.html" alt="vai para a página inicial do site"
-                    title="retorna para a página Inicial">Página inicial</a> |
-                <a href="#marcas" alt="vai para a página de Produtos e Marcas"
-                    title="vai para a página de produtos e marcas">Produtos e Marcas</a> |
-                <a href="faleConosco.html" alt="vai para a página de fale conosco"
-                    title="vai para a página de fale conosco">Fale Conosco</a>
-                <br>
-                <br>
-                <a class="btn_destaque" href="OndeEstamos.html">Onde estamos</a>
-            </nav>
-        </div>
-    </header>
-    <br class="clearfix">
-    <section class="sec01">
-        <div class="container">
-            <p class="titulo">
-                Ajuda profissional <br>
-                para escolher as <br>
-                melhores lentes
-            </p>
-
-            <p id="arm">
-                Armações e lentes
-            </p>
-
-            <a class="btn_destaque" href="OndeEstamos.html">Onde estamos</a>
-        </div>
-    </section>
-    <section class="sec02">
-        <div class="container">
-            <a name="marcas"></a>
-            <p>
-                Trabalhamos com as melhores marcas de <b>lentes</b>
-            </p>
-
-            <img src="img/LogoLentes.png" alt="Logo de marcas (Lentes)">
-        </div>
-    </section>
-    <section class="sec02">
-        <div class="container">
-            <p>
-                e de armações
-            </p>
-
-            <img src="img/LogoArmacoes.png" alt="Logo de marcas (Armações)">
-        </div>
-    </section>
-
-    <section class="sec03">
-        <div class="container">
-            <div class="largura40">
+    <main>
+        <div class="pos_modal">
+            <div class="modal">
+                <a class="fechar">X</a>
+                <h2>Ofertas de 10%</h2>
                 <p>
-                    Grande <br>
-                    variedades <br>
-                    de armações
+                <form name="modal_form" method="get">
+                    digite seu e-mail e ganhe 10% de desconto em qualquer compra:
+                    <br>
+                    <br>
+                    <input type="text" name="email" autocomplete="off" placeholder="digite seu e-mail aqui">
+                    <br>
+                    <span name="invalido" class="nao_valido">E-mail inválido</span>
+                    <input type="submit" value="Enviar" class="btn_destaque" />
+                </form>
                 </p>
-
-                <a class="btn_destaque" href="OndeEstamos.html">Venha conferir</a></a>
             </div>
         </div>
-        <div class="largura60 home2"></div>
-    </section>
-    <footer>
-        <div class="container">
-            <div class="um_terco">
-                <img class="logo" src="img/JHOW´S ÓTICA.png" alt="logo da empresa" title="aqui fica a logo da empresa">
-                <p>
-                    Nós oferecemos um serviço completo <br>
-                    para melhor conforto da sua visão
-                </p>
-                <a href="https://www.facebook.com/jhousefkl">
-                    <img src="img/facebook.jpg" width="30" alt="link para facebook">
-                </a>
-                <a href="#">
-                    <img src="img/twitter.jpg" width="30" alt="link para twitter">
-                </a>
-                <a href="https://www.instagram.com/jhousef_mz/">
-                    <img src="img/Instragram.jpg" width="30" alt="link para instagram">
-                </a>
-            </div>
-            <div class="um_terco">
-                <div class="margem_esquerda">
-                    <h4>Links</h4>
-                    <p>
-                        <a href="index.html">Início</a> <br>
-                        <a href="#marcas">Produtos e Marcas</a> <br>
-                        <a href="faleConosco.html">Fale Conosco</a> <br>
-                        <a href="OndeEstamos.html">Onde Estamos</a> <br>
-                    </p>
+        <header>
+            <div class="barra_superior">
+                <div class="container">
+                    horário de Abertura: 8:00 - 18:00h
                 </div>
             </div>
-            <div class="um_terco">
-                <h4>Contato</h4>
+            <div class="container">
+                <img class="logo" src="img/JHOW´S ÓTICA.png" alt="aqui está a logo da empresa"
+                    title="logo da empresa Jhow">
 
-                <p>
-                    <b>Endereço:</b>
-                    Rua X, endereço Y, Avenida Z, <br>
-                    Maranhão, MA 65210-000.
-                </p>
 
-                <p>
-                    <b>Telefone:</b>
-                    <a href="tel:9898000000">(98) 9800-0000</a>
-                </p>
-
-                <p>
-                    <b>Email:</b>
-                    <a href="mailto:otica@octica.com">otica@otica.com</a>
-                </p>
-
+                <nav>
+                    <a href="index.html" alt="vai para a página inicial do site"
+                        title="retorna para a página Inicial">Página inicial</a> |
+                    <a href="#marcas" alt="vai para a página de Produtos e Marcas"
+                        title="vai para a página de produtos e marcas">Produtos e Marcas</a> |
+                    <a href="faleConosco.html" alt="vai para a página de fale conosco"
+                        title="vai para a página de fale conosco">Fale Conosco</a>
+                    <br>
+                    <br>
+                    <a class="btn_destaque" href="OndeEstamos.html">Onde estamos</a>
+                </nav>
             </div>
-        </div>
+        </header>
         <br class="clearfix">
-        <div class="direitos_reservados">
-            <p>
-                Todos os direitos reservados &reg; 2022.
-                <a href="termosDeUso.html">Termos de uso</a> e <a href="politicaDePrivacidade.html">política de
-                    privacidade
-                </a>.
-            </p>
-        </div>
+        <section class="sec01">
+            <div class="container">
+                <p class="titulo">
+                    Ajuda profissional <br>
+                    para escolher as <br>
+                    melhores lentes
+                </p>
+
+                <p id="arm">
+                    Armações e lentes
+                </p>
+
+                <a class="btn_destaque" href="OndeEstamos.html">Onde estamos</a>
+            </div>
+        </section>
+        <section class="sec02">
+            <div class="container">
+                <a name="marcas"></a>
+                <p>
+                    Trabalhamos com as melhores marcas de <b>lentes</b>
+                </p>
+
+                <img src="img/LogoLentes.png" alt="Logo de marcas (Lentes)">
+            </div>
+        </section>
+        <section class="sec02">
+            <div class="container">
+                <p>
+                    e de armações
+                </p>
+
+                <img src="img/LogoArmacoes.png" alt="Logo de marcas (Armações)">
+            </div>
+        </section>
+
+        <section class="sec03">
+            <div class="container">
+                <div class="largura40">
+                    <p>
+                        Grande <br>
+                        variedades <br>
+                        de armações
+                    </p>
+
+                    <a class="btn_destaque" href="OndeEstamos.html">Venha conferir</a></a>
+                </div>
+            </div>
+            <div class="largura60 home2"></div>
+        </section>
+        <footer>
+            <div class="container">
+                <div class="um_terco">
+                    <img class="logo" src="img/JHOW´S ÓTICA.png" alt="logo da empresa"
+                        title="aqui fica a logo da empresa">
+                    <p>
+                        Nós oferecemos um serviço completo <br>
+                        para melhor conforto da sua visão
+                    </p>
+                    <a href="https://www.facebook.com/jhousefkl">
+                        <img src="img/facebook.jpg" width="30" alt="link para facebook">
+                    </a>
+                    <a href="#">
+                        <img src="img/twitter.jpg" width="30" alt="link para twitter">
+                    </a>
+                    <a href="https://www.instagram.com/jhousef_mz/">
+                        <img src="img/Instragram.jpg" width="30" alt="link para instagram">
+                    </a>
+                </div>
+                <div class="um_terco">
+                    <div class="margem_esquerda">
+                        <h4>Links</h4>
+                        <p>
+                            <a href="index.html">Início</a> <br>
+                            <a href="#marcas">Produtos e Marcas</a> <br>
+                            <a href="faleConosco.html">Fale Conosco</a> <br>
+                            <a href="OndeEstamos.html">Onde Estamos</a> <br>
+                        </p>
+                    </div>
+                </div>
+                <div class="um_terco">
+                    <h4>Contato</h4>
+
+                    <p>
+                        <b>Endereço:</b>
+                        Rua X, endereço Y, Avenida Z, <br>
+                        Maranhão, MA 65210-000.
+                    </p>
+
+                    <p>
+                        <b>Telefone:</b>
+                        <a href="tel:9898000000">(98) 9800-0000</a>
+                    </p>
+
+                    <p>
+                        <b>Email:</b>
+                        <a href="mailto:otica@octica.com">otica@otica.com</a>
+                    </p>
+
+                </div>
+            </div>
+    </main>
+    <br class="clearfix">
+    <div class="direitos_reservados">
+        <p>
+            Todos os direitos reservados &reg; 2022.
+            <a href="termosDeUso.html">Termos de uso</a> e <a href="politicaDePrivacidade.html">política de
+                privacidade
+            </a>.
+        </p>
+    </div>
     </footer>
 
     <style>
